# dcerpc

./: .gitignore  .travis.yml  APPLE_LICENSE  DCERPC-Info.plist  DCERPC.exports  Makefile  README  README.md  TODO
BuildConfig/: junk.c  (+18 more)
dcerpc/: .gitignore  BUILD-LINUX-DEBUG.SH  BUILD-LINUX.SH  BUILD-LINUX64-DEBUG.SH  BUILD-LINUX64.SH  COPYING  Makefile.am  README.local  buildconf  configure.ac  configure.in  include.mk
dcerpc/compat/: Makefile.am
dcerpc/dcelib/: Makefile.am  dummyfuncs.c  mswrappers.c
dcerpc/dcelib/darwin/: wc16str.c  wc16str.h
dcerpc/dcerpc.xc.configurations/: auth_gss_negotiate.xcconfig  base_config.xcconfig  buildconf_configure  copy_dce_headers  dce.xcconfig  dceidl.xcconfig  dcerpc.xcconfig  dcerpc_framework.xcconfig  dcerpcd.xcconfig  dcethread.xcconfig  flex.xcconfig  idl.xcconfig  rpc_paths.xcconfig  stubs.xcconfig  transports.xcconfig  uuid.xcconfig
dcerpc/dcerpc.xcodeproj/: project.pbxproj
dcerpc/demos/: Makefile.am
dcerpc/demos/access/: access.idl  access_client.c  access_server.c  getopt.c  getopt.h  misc.c  misc.h
dcerpc/demos/echo_number/: Makefile.am  echon.idl  echon_client.c  echon_server.c  getopt.c  getopt.h  misc.c
dcerpc/demos/echo_server/: Makefile.am  README  echo.idl  echo_client.c  echo_server.c  getopt.c  getopt.h  misc.c  misc.h
dcerpc/demos/echo_union/: Makefile.am  echou.idl  echou_client.c  echou_server.c  misc.c  misc.h
dcerpc/demos/samr_test/: Makefile.am  misc.c  misc.h  samrt.idl  samrt_client.c  samrt_server.c
dcerpc/flex-2.5.4/: gen.c  initscan.c  misc.c  scan.l
dcerpc/flex-2.5.4/MISC/MVS/: initscan-mvs.c
dcerpc/idl_compiler/: Makefile.am  acf_l.l  acf_y.y  ast.h  astp.h  astp_com.c  astp_cpx.c  astp_dmp.c  astp_dmp.h  astp_exp.c  astp_gbl.c  astp_sim.c  backend.h  be_pvt.h  bedeck.h  checker.c  checker.h  chkichar.c  chkichar.h  clihamts.c  clihamts.h  clihandl.h  command.c  command.h  commstat.h  comstmts.c  cspeldcl.c  cspeldcl.h  cspell.c  cspell.h  cstubgen.h  cstubmts.c  cstubmts.h  ddbe.c  ddbe.h  ddspell.c  default_msg.h  driver.c  driver.h  dutils.h  (+46 more)
dcerpc/idl_lib/: Makefile.am  alfrsupp.c  allocate.c  autohndl.c  bindcall.c  ctxeecli.c  ctxeectx.c  ctxeertl.h  ctxerrtl.c  cvt.h  cvt_glob.c  cvt_pvt.h  eebool.c  eebyte.c  eechar.c  eedouble.c  eeenum.c  eefloat.c  eehyper.c  eelong.c  eenodtbl.c  eeshort.c  eesmall.c  eeuhyper.c  eeulong.c  eeushort.c  eeusmall.c  erbool.c  erbyte.c  erchar.c  erdouble.c  erenum.c  erfloat.c  erhyper.c  erlong.c  ernodtbl.c  ershort.c  ersmall.c  eruhyper.c  erulong.c  (+55 more)
dcerpc/include/compat/: Makefile.am  baserpc.h  dce2msrpc.h  dcerpc.h  dcerpc.idl.include  mswrappers.h  rpcfields.h  rpcstatus.h  winerror.h  winerror_history.txt
dcerpc/include/dce/: Makefile.am  codesets.acf  codesets.idl  codesets_stub.h  conv.idl  convc.idl  dcethread.h  ep.acf  ep.idl  id_base.idl  idl_es.h  idlbase.h  idlddefs.h  iovector.idl  lbase.idl  lrpc.idl  marshall.h.in  mgmt.acf  mgmt.idl  nbase.acf  nbase.idl  ncastat.idl  ndr_rep.h.in  ndrold.idl  ndrtypes.h.in  rpc.idl  rpcbase.idl  rpcexc.h  rpcpvt.idl  rpcsts.idl  rpctypes.idl  schannel.idl  smb.idl  stubbase.h  twr.idl  uuid.idl
dcerpc/include/dce/aix5.2.0.0/: dce.h
dcerpc/include/dce/alpha/: marshall.h  ndr_rep.h  ndrtypes.h
dcerpc/include/dce/darwin/: dce.h  dce_error.h  dce_utils.h  sec_authn.h
dcerpc/include/dce/freebsd6.0/: dce.h  dce_error.h  sec_authn.h
dcerpc/include/dce/generic/: marshall.h  ndr_rep.h  ndrtypes.h
dcerpc/include/dce/hppa2.0/: marshall.h  ndr_rep.h  ndrtypes.h
dcerpc/include/dce/hpux11.11/: dce.h  dce_utils.h
dcerpc/include/dce/i386/: marshall.h  ndr_rep.h  ndrtypes.h
dcerpc/libdcethread/: Makefile.am  dcethread-debug.c  dcethread-debug.h  dcethread-exception.c  dcethread-exception.h  dcethread-private.c  dcethread-private.h  dcethread-test.c  dcethread-test.h  dcethread-util.c  dcethread-util.h  dcethread_atfork.c  dcethread_attr_create.c  dcethread_attr_delete.c  dcethread_attr_getinheritsched.c  dcethread_attr_getprio.c  dcethread_attr_getsched.c  dcethread_attr_getstacksize.c  dcethread_attr_setinheritsched.c  dcethread_attr_setprio.c  dcethread_attr_setsched.c  dcethread_attr_setstacksize.c  dcethread_checkinterrupt.c  dcethread_cond_broadcast.c  dcethread_cond_destroy.c  dcethread_cond_init.c  dcethread_cond_signal.c  dcethread_cond_timedwait.c  dcethread_cond_wait.c  dcethread_condattr_create.c  dcethread_condattr_delete.c  dcethread_create.c  dcethread_delay.c  dcethread_detach.c  dcethread_enableasync.c  dcethread_enableinterrupt.c  dcethread_equal.c  dcethread_exc_getname.c  dcethread_exc_getstatus.c  dcethread_exc_init.c  (+42 more)
dcerpc/m4/: acinclude.m4  ax_check_framework.m4  rpc_libunistr.m4  rpc_smbclient.m4
dcerpc/ncklib/: Makefile.am  cn.h  cnasgsm.h  cnassm.h  cnassoc.c  cnassoc.h  cnbind.c  cnbind.h  cncall.c  cncall.h  cncasgsm.c  cncassm.c  cncclsm.c  cnclsm.h  cncthd.c  cncthd.h  cnfbuf.c  cnfbuf.h  cnid.c  cnid.h  cninit.c  cnmgmt.c  cnmgmt.h  cnnet.c  cnnet.h  cnnp.c  cnnp.h  cnp.c  cnp.h  cnpkt.c  cnpkt.h  cnrcvr.c  cnrcvr.h  cnsasgsm.c  cnsassm.c  cnsclsm.c  cnsm.c  cnsm.h  cnxfer.c  cnxfer.h  (+151 more)
dcerpc/perf/: Makefile.am  README  client.c  perf.acf  perf.c  perf.idl  perf_c.h  perf_p.h  perf_tcp.sh  perf_udp.sh  perfb.c  perfb.idl  perfc.idl  perfg.c  perfg.idl  run_client.sh  run_tests.sh  server.c  util.c  vax.h
dcerpc/rpcd/: Makefile.am  dcerpcd.reg.in  dsm.c  dsm.idl  dsm_p.h  dsm_unix.c  rc.dce-clean  rc.dcerpcd  rpcd.c  rpcddb.c  rpcddb.h  rpcdep.c  rpcdepdb.c  rpcdepdb.h  rpcdepdbp.h  rpcdp.h  rpcdsliv.c  rpcdutil.c  rpcdutil.h
dcerpc/tools/: Makefile.am  epstatus.c
dcerpc/transport/: Makefile.am  cnassoc.c  cnbind.c  cncall.c  cncasgsm.c  cncassm.c  cncclsm.c  cncthd.c  cnfbuf.c  cnid.c  cninit.c  cnnet.c  cnpkt.c  cnrcvr.c  cnsasgsm.c  cnsassm.c  cnsclsm.c  cnsm.c  cnxfer.c  conv.c  dg.c  dgcall.c  dgccall.c  dgccallt.c  dgcct.c  dgclive.c  dgclsn.c  dgexec.c  dgfwd.c  dgglob.c  dghnd.c  dginit.c  dglossy.c  dglsn.c  dgpkt.c  dgrq.c  dgscall.c  dgsct.c  dgslive.c  dgslsn.c  (+14 more)
dcerpc/uuid/: get_802_addr.c  uuid.c  uuid_i.h  uuidsys.c  uuidtool.c
(+73 files in other folders)
